--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,6 +93,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-image: url('../../public/images/peace.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 a {
@@ -103,5 +106,14 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-3px);
   }
 }
