--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,18 +20,52 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-  background-image: url('../../public/images/peace.jpg');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed; 
+  position: relative;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
 }
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/public/assets/images/anatta.jpg') center/cover; /* Reemplaza 'tu_imagen.jpg' con la ruta de tu imagen */
+  z-index: -2;
+  filter: blur(23px); /* Ajusta el valor según tu preferencia */
+}
+
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(-45deg, #191818, #365a45, #191818, #365a45, #191818);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  z-index: -1;
+  opacity: 0.9; /* Ajusta el valor de opacidad según tu preferencia */
+
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
 
 .main-container {
   position: relative;
