--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+    
 }
 
 
@@ -33,9 +34,11 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/public/assets/images/anatta.jpg') center/cover; /* Reemplaza 'tu_imagen.jpg' con la ruta de tu imagen */
-  z-index: -2;
-  filter: blur(23px); /* Ajusta el valor según tu preferencia */
+  background: url('/assets/images/drop.gif');
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  filter: blur(5px)
 }
 
 body::after {
@@ -43,28 +46,23 @@ body::after {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(-45deg, #191818, #365a45, #191818, #365a45, #191818);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  width: 200%;
+  height: 200%;
+  background: rgb(25, 24, 24);
+  background: radial-gradient(circle, rgb(119, 81, 116) 0%, rgba(74, 50, 72, 1) 8%, rgba(54, 90, 86, 1) 41%, rgb(24, 24, 24) 100%);
+  animation: gradient 15s linear infinite;
   z-index: -1;
-  opacity: 0.9; /* Ajusta el valor de opacidad según tu preferencia */
-
+  opacity: 0.9;
 }
 
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
   }
-  50% {
+  100% {
     background-position: 100% 50%;
   }
-  100% {
-    background-position: 0% 50%;
-  }
 }
-
 
 
 .main-container {
