--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-    
+  --font-title: Inter, sans-serif;
+  --font-p: Poppins, sans-serif;
 }
+
+p {
+  font-family: var(--font-p);
+  color: #F4F4ED;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-title);
+  color: #F4F4ED;
+}
+
 
 
 * {
@@ -16,58 +27,19 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
   position: relative;
   height: 100vh;
   margin: 0;
-  overflow: hidden;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('/assets/images/drop.gif');
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  filter: blur(5px)
-}
-
-body::after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 200%;
-  height: 200%;
-  background: rgb(25, 24, 24);
-  background: radial-gradient(circle, rgb(119, 81, 116) 0%, rgba(74, 50, 72, 1) 8%, rgba(54, 90, 86, 1) 41%, rgb(24, 24, 24) 100%);
-  animation: gradient 15s linear infinite;
-  z-index: -1;
-  opacity: 0.9;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  100% {
-    background-position: 100% 50%;
-  }
-}
-
-
-.main-container {
-  position: relative;
-  min-height: 100vh;
+  overflow: auto;
+  background: #201e1b;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  scrollbar-width: thin;
+  scrollbar-color: #888 #F4F4ED;
 }
 
 a {
@@ -75,12 +47,114 @@ a {
   text-decoration: none;
 }
 
-@keyframes float {
-  0%, 100% {
-    transform: translateY(0);
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
   }
   50% {
-    transform: translateY(-3px);
+    transform: rotate(180deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation: rotate 20s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite;
+}
+
+.work-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.work-item {
+  background-color: #201E1B;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+  width: 300px;
+  border: 1px solid #F4F4ED;
+}
+
+.work-item img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.work-item h2 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+
+h1 {
+  text-align: center;
+}
+
+a {
+  color: #F48245;
+}
+
+.category-label {
+  color: #F4F4ED;
+  border-radius: 4px;
+  font-size: 0.8em;
+  margin-right: 5px;
+}
+
+@keyframes fade-in-down {
+  from {
+    opacity: 0;
+    transform: translateY(-50px); 
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-in-up {
+  from {
+    opacity: 0;
+    transform: translateY(50px); 
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-down {
+  animation: fade-in-down 1s ease forwards; 
+}
+
+.fade-in-up {
+  animation: fade-in-up 1s ease forwards;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  z-index: 9999;
+  border-radius: 8px;
+  transition: all 0.5s ease-in-out;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 9998;
 }
 
