--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   min-height: 100vh;
   font-family: Arial, Verdana, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Noto Sans, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji !important;
-  scrollbar-width: thin;
+  scrollbar-width: auto;
   scrollbar-color: #888 #F4F4ED;
 }
 
