--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ body {
   min-height: 100vh;
   font-family: Arial, Verdana, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Noto Sans, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji !important;
   scrollbar-width: auto;
-  scrollbar-color: #888 #F4F4ED;
+  scrollbar-color: #201e1b #F4F4ED;
 }
 
 p {
@@ -141,6 +141,8 @@ a {
   align-items: center;
 }
 
+/*_______OTHERS_______*/
+
 @media(min-width: 950px) {
   .container {
       margin-left:auto;
@@ -153,4 +155,37 @@ menu, ol, li, ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+}
+
+/*_______APP ROUTER ANIMATION_______*/
+
+
+.fade-in {
+  animation: fadeInAnimation 0.6s linear;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+}
+
+.fade-out {
+  animation: fadeOutAnimation 0.6s linear;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+}
+
+@keyframes fadeInAnimation {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+@keyframes fadeOutAnimation {
+  from {
+      opacity: 1;
+  }
+  to {
+      opacity: 0;
+  }
 }
